--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 #How to view the request url for debugging
 logging.level.org.springframework.web.servlet.DispatcherServlet=debug
+#Порты, зависящие от среды(так как это вторая часть проекта порт 8080 занять при запущенной Часть-1 проекта)
+server.port=8081
